Changed file sass (added styles for less resolution)

--- a/sass/style-adaptive1.sass
+++ b/sass/style-adaptive1.sass
@@ -2,7 +2,7 @@
   /*Adaptive1 for Home page*/
   /*Adaptive1 for slide1*/
   .slider-1
-    background-image: url(img/slide-adaptive1.jpg)
+    background-image: url(../img/slide-adaptive1.jpg)
     background-size: cover
 
   .menu
@@ -36,7 +36,7 @@
 
   /*Adaptive1 for section slider-footer*/
   .slider_footer
-    background-image: url(img/slider-footer-adaptive1.jpg)
+    background-image: url(../img/slider-footer-adaptive1.jpg)
     background-size: cover
     height: 600px
 
