--- a/sass/style-adaptive2.sass
+++ b/sass/style-adaptive2.sass
@@ -2,7 +2,7 @@
   /*Adaptive2 for Home page*/
   /*Adaptive2 for slide-1*/
   .slider-1
-    background-image: url(img/slide-adaptive2.jpg)
+    background-image: url(../img/slide-adaptive2.jpg)
     background-size: cover
     grid-template-rows: 400px 450px 50px
     height: 970px
@@ -357,8 +357,41 @@
     font-size: 1.7em
 
 
+//Adaptive style for screen max 693px
 
+@media all and (max-width: 693px)
+  .logo
+    display: none
+  .menu
+    margin-left: 350%
+  .title
+    margin: 20px
+    grid-row-gap: 4vh
+    h2
+      font-size: 1.5em
+      text-align: center
+    h1
+      font-size: 2em
+      text-align: center
 
+  .our_services
+    margin-top: 20vh
+    h2
+      margin-right: 10%
+
+  .footer
+    display: contents
+  .information
+    margin-left: 30%
+  .information-call
+    margin-left: 7%
+  .footer-down
+    margin-top: 2vh
+    margin-left: 5%
+    margin-bottom: 2vh
+
+  .warcraft-1
+    height: 80%
 
 
 
