--- a/sass/style-adaptive1.css
+++ b/sass/style-adaptive1.css
@@ -2,7 +2,7 @@
   /*Adaptive1 for Home page*/
   /*Adaptive1 for slide1*/
   .slider-1 {
-    background-image: url(img/slide-adaptive1.jpg);
+    background-image: url(../img/slide-adaptive1.jpg);
     background-size: cover;
   }
 
@@ -43,7 +43,7 @@
 
   /*Adaptive1 for section slider-footer*/
   .slider_footer {
-    background-image: url(img/slider-footer-adaptive1.jpg);
+    background-image: url(../img/slider-footer-adaptive1.jpg);
     background-size: cover;
     height: 600px;
   }
