--- a/sass/style.sass
+++ b/sass/style.sass
@@ -20,7 +20,7 @@ h3
 /* Style for Home page*/
 /* style for slide-1*/
 .slider-1
-  background-image: url(img/slide.jpg)
+  background-image: url(../img/slide.jpg)
   background-size: cover
 
 #logo
@@ -150,7 +150,7 @@ h3
 
 /*Style for section slider-footer*/
 .slider_footer
-  background-image: url(img/slider-footer.jpg)
+  background-image: url(../img/slider-footer.jpg)
   background-size: cover
 
 /*Style for section footer*/
