--- a/sass/style_index.css
+++ b/sass/style_index.css
@@ -14,7 +14,7 @@
   display: grid;
   grid-template-rows: 300px 570px 50px;
   grid-template-columns: 100%;
-  height: 985px;
+  height: 100vh;
 }
 
 .header {
