--- a/sass/style_index.sass
+++ b/sass/style_index.sass
@@ -12,7 +12,7 @@
   display: grid
   grid-template-rows: 300px 570px 50px
   grid-template-columns: 100%
-  height: 985px
+  height: 100vh
 
 .header
   display: grid
